macros/enum-iter-macro-tests/tests/ui/fail_struct.rs
use enum_iter_macro::EnumIter;

#[derive(EnumIter)]
struct Foo {
    x: i32,
}

fn main() {}
